<resources>
    <string name="host_url">http://localhost:8080</string>
    <string name="app_name">FileStorage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="folders">Folders:</string>
    <string name="files">Files:</string>
    <string name="name">Name</string>
    <string name="create">create</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="cancel">cancel</string>
</resources>
