<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/Theme.MaterialComponents.Light.NoActionBar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dialog.FileCreateDialog"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/fr_file_dialog_btn_file"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/file"/>

        <RadioButton
            android:id="@+id/fr_file_dialog_btn_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/folder"/>

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/fr_file_dialog_filename"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <android.support.design.button.MaterialButton
            android:id="@+id/fr_file_dialog_btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/fr_file_dialog_btn_create"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:text="@string/create"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>